[tool.poetry]
name = "pancho"
version = "1.0.5"
description = "Commands and queries processor"
readme = "README.md"
repository = "https://github.com/smairon/pancho"
authors = ["Smairon <man@smairon.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
zodchy = "^0.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"