[tool.poetry]
name = "pancho"
version = "1.2.1"
description = "Commands and queries processor"
readme = "README.md"
repository = "https://github.com/smairon/pancho"
authors = ["Smairon <man@smairon.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
zodchy = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
mypy= "^1.11.1"

[tool.mypy]
disable_error_code = "import-untyped"