[tool.poetry]
name = "pancho"
version = "1.3.8"
description = "Commands and queries processor"
readme = "README.md"
repository = "https://github.com/smairon/pancho"
authors = ["Smairon <man@smairon.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
zodchy = "^0.5.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
mypy = "^1.13.0"
pytest = "^8.3.3"
zorge = "^1.2.2"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.mypy]
disable_error_code = "import-untyped"